--- a/dataframe_cleaner.ipynb
+++ b/dataframe_cleaner.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cdb28ca7",
+   "id": "21b3a90e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "import pickle"
+    "import xlsxwriter"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2a387454",
+   "id": "d3cb2729",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "00fd42db",
+   "id": "9a5e59be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8420cc9c",
+   "id": "adbf35d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a687f57e",
+   "id": "b4dffda5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,208 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "70bbe787",
+   "execution_count": 6,
+   "id": "70ec1f52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>category</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>price</th>\n",
-       "      <th>mode</th>\n",
-       "      <th>unit</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Beef Broth</td>\n",
-       "      <td>Soups &amp; Broth</td>\n",
-       "      <td>Best Yet</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Chicken Broth</td>\n",
-       "      <td>Soups &amp; Broth</td>\n",
-       "      <td>Best Yet</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Reduced Sodium Chicken Broth</td>\n",
-       "      <td>Soups &amp; Broth</td>\n",
-       "      <td>Best Yet</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ajinomoto Stock Soup  2.11oz</td>\n",
-       "      <td>Soups &amp; Broth</td>\n",
-       "      <td>Hondashi</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Honey Bear</td>\n",
-       "      <td>Spreads</td>\n",
-       "      <td>Best Yet</td>\n",
-       "      <td>3.49</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>353</th>\n",
-       "      <td>Edamame Shelled Soybeans 12 oz. Bag</td>\n",
-       "      <td>Frozen Snacks &amp; Appetizers</td>\n",
-       "      <td>Seapoint Farms</td>\n",
-       "      <td>2.89</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>354</th>\n",
-       "      <td>Italian Style Meatballs (Chicken &amp; Beef)</td>\n",
-       "      <td>Frozen Meat &amp; Seafood</td>\n",
-       "      <td>Buona Vita</td>\n",
-       "      <td>6.49</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>355</th>\n",
-       "      <td>Natural Catch Grilled Fillets Garlic Butter</td>\n",
-       "      <td>Frozen Meat &amp; Seafood</td>\n",
-       "      <td>Gorton's</td>\n",
-       "      <td>3.49</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>356</th>\n",
-       "      <td>Shaved Steak</td>\n",
-       "      <td>Frozen Meat &amp; Seafood</td>\n",
-       "      <td>Old Neighborhood</td>\n",
-       "      <td>6.79</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>357</th>\n",
-       "      <td>31/40 Cooked Shrimp P&amp;D, 1lb</td>\n",
-       "      <td>Frozen Meat &amp; Seafood</td>\n",
-       "      <td>Best Yet</td>\n",
-       "      <td>7.99</td>\n",
-       "      <td>weight</td>\n",
-       "      <td>each</td>\n",
-       "      <td>https://centralsquare.dailytable.org/store/dai...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>357 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                             name                    category  \\\n",
-       "0                                      Beef Broth               Soups & Broth   \n",
-       "1                                   Chicken Broth               Soups & Broth   \n",
-       "2                   Reduced Sodium Chicken Broth                Soups & Broth   \n",
-       "3                    Ajinomoto Stock Soup  2.11oz               Soups & Broth   \n",
-       "4                                      Honey Bear                     Spreads   \n",
-       "..                                            ...                         ...   \n",
-       "353           Edamame Shelled Soybeans 12 oz. Bag  Frozen Snacks & Appetizers   \n",
-       "354      Italian Style Meatballs (Chicken & Beef)       Frozen Meat & Seafood   \n",
-       "355   Natural Catch Grilled Fillets Garlic Butter       Frozen Meat & Seafood   \n",
-       "356                                  Shaved Steak       Frozen Meat & Seafood   \n",
-       "357                  31/40 Cooked Shrimp P&D, 1lb       Frozen Meat & Seafood   \n",
-       "\n",
-       "                brand  price    mode  unit  \\\n",
-       "0            Best Yet   1.69  weight  each   \n",
-       "1            Best Yet   1.69  weight  each   \n",
-       "2            Best Yet   1.69  weight  each   \n",
-       "3            Hondashi   0.89  weight  each   \n",
-       "4            Best Yet   3.49  weight  each   \n",
-       "..                ...    ...     ...   ...   \n",
-       "353    Seapoint Farms   2.89  weight  each   \n",
-       "354        Buona Vita   6.49  weight  each   \n",
-       "355          Gorton's   3.49  weight  each   \n",
-       "356  Old Neighborhood   6.79  weight  each   \n",
-       "357          Best Yet   7.99  weight  each   \n",
-       "\n",
-       "                                                   url  \n",
-       "0    https://centralsquare.dailytable.org/store/dai...  \n",
-       "1    https://centralsquare.dailytable.org/store/dai...  \n",
-       "2    https://centralsquare.dailytable.org/store/dai...  \n",
-       "3    https://centralsquare.dailytable.org/store/dai...  \n",
-       "4    https://centralsquare.dailytable.org/store/dai...  \n",
-       "..                                                 ...  \n",
-       "353  https://centralsquare.dailytable.org/store/dai...  \n",
-       "354  https://centralsquare.dailytable.org/store/dai...  \n",
-       "355  https://centralsquare.dailytable.org/store/dai...  \n",
-       "356  https://centralsquare.dailytable.org/store/dai...  \n",
-       "357  https://centralsquare.dailytable.org/store/dai...  \n",
-       "\n",
-       "[357 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#correct brands\n",
     "brands = {brand.replace('\\n', '') for brand in open('brands.txt', 'r').readlines()}\n",
-    "\n",
     "for brand in brands:\n",
     "    products.loc[products['name'].str.contains(brand), 'brand'] = brand\n",
     "    products['name'] = products['name'].map(lambda x: x.replace(brand, ''))"
@@ -273,18 +78,31 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c9f3700d",
+   "id": "28bcd5a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export to cleaned folder\n",
-    "products.to_csv(folder+'_cleaned/'+csv_name, index=False)"
+    "#shorten excessive category names\n",
+    "products.loc[products['category'] == 'Canned Beans, Fruits & Vegetables', 'category'] = 'Canned Beans, Fruit & Veg'\n",
+    "products.loc[products['category'] == 'Salad Dressings, Sauces & Condiments', 'category'] = 'Dressings, Sauces & Condiments'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f5b3d5cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sort and export to cleaned folder\n",
+    "productsproducts.sort_values(by=['category'])\n",
+    "products.to_csv(folder + '_cleaned/' + csv_name, index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee65aef5",
+   "id": "93d1ef87",
    "metadata": {},
    "outputs": [],
    "source": []
