update to actual python file this time

--- a/dataframe_cleaner.ipynb
+++ b/dataframe_cleaner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "21b3a90e",
+   "id": "fc70c2b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d3cb2729",
+   "id": "614c2480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9a5e59be",
+   "id": "3ada473e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "adbf35d1",
+   "id": "76a618db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b4dffda5",
+   "id": "55857972",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "70ec1f52",
+   "id": "0519f206",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "28bcd5a8",
+   "id": "3594628d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,20 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f5b3d5cd",
+   "execution_count": 8,
+   "id": "4aac79da",
    "metadata": {},
    "outputs": [],
    "source": [
     "#sort and export to cleaned folder\n",
-    "productsproducts.sort_values(by=['category'])\n",
+    "products = products.sort_values(by=['category'])\n",
     "products.to_csv(folder + '_cleaned/' + csv_name, index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93d1ef87",
+   "id": "ecd7b4d4",
    "metadata": {},
    "outputs": [],
    "source": []
